--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>First-Protfolio</title>
 </head>
 <body>
+    <section>
+         <div class="half-width">
+             <h1>Welcome To</h1>
+    <h1><span class="name-color">Abuzar Gefari</span> World!</h1>
+    <h3>World class professional web developer
+</h3>
+<p>I am Md.Abuzar Gefari,I am a Web designer and developer.I live in Dhaka Bangladesh.I read in Rajshahi University in Accounting Department.Finnaly i complete web desing form programmer hero</p>
+<a class="hire-button"href="https://www.linkedin.com/in/abuzar-gefari-a56b6b1b9/">HIRE ME</a>
+</div>
+   <div class="half-width">
+       <img src="image/profile1.png" alt="">
+    </div>
+</section>
     
+
 </body>
 </html>
