mid part complete

--- a/index.html
+++ b/index.html
@@ -11,20 +11,30 @@
     <title>First-Protfolio</title>
 </head>
 <body>
-    <section>
+    <section class="top-banner">
          <div class="half-width">
              <h1>Welcome To</h1>
     <h1><span class="name-color">Abuzar Gefari</span> World!</h1>
     <h3>World class professional web developer
 </h3>
 <p>I am Md.Abuzar Gefari,I am a Web designer and developer.I live in Dhaka Bangladesh.I read in Rajshahi University in Accounting Department.Finnaly i complete web desing form programmer hero</p>
-<a class="hire-button"href="https://www.linkedin.com/in/abuzar-gefari-a56b6b1b9/">HIRE ME</a>
+<a target="_blank" class="hire-button"href="https://www.linkedin.com/in/abuzar-gefari-a56b6b1b9/">HIRE ME</a>
 </div>
    <div class="half-width">
        <img src="image/profile1.png" alt="">
     </div>
 </section>
-    
+    <section class="mid-part">
+        <div class="half-width">
+            <img src="image/profile2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Big Dream</h1>
+            <h2>Become world's no. 1 web developrer</h2>
+            <p>I am already larned basic HTML and Css.I can bulid a professional protfolio web desing.I already complete about 30 protfolio web site.Thas's why i am very happy.</p>
+            <a class="hire-button" target="_blank" href="">DOWNLOAD CV</a>
+        </div>
+    </section>
 
 </body>
 </html>
