--- a/index.html
+++ b/index.html
@@ -35,6 +35,26 @@
             <a class="hire-button" target="_blank" href="">DOWNLOAD CV</a>
         </div>
     </section>
+    <section>
+<h1>Experiance</h1>
+<div class="exp-bd">
+    <div id="full-stuck" class="exp-dev">
+
+<h2>Full stack web developer</h2>
+<h3 class="name-color">2021-present | Pro level web developer</h3>
+<p>I am already larned basic HTML and Css.I can bulid a professional protfolio web desing.I already complete about 30 protfolio web site.Thas's why i am very happy.</p>
+</div>
+<div id="baby-web" class="exp-dev">
+    <h2>Baby web developer</h2>
+<h3 class="name-color">2020-2021 | programiming hero learner</h3>
+    <p>I am already larned basic HTML and Css.I can bulid a professional protfolio web desing.I already complete about 30 protfolio web site.Thas's why i am very happy</p>
+</div>
+</div>
+
+    </section>
+    <footer>
+        <p>@ web developer Abuzar</p>
+    </footer>
 
 </body>
 </html>
