--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1><span class="name-color">Abuzar Gefari</span> World!</h1>
     <h3>World class professional web developer
 </h3>
-<p>I am Md.Abuzar Gefari,I am a Web designer and developer.I live in Dhaka Bangladesh.I read in Rajshahi University in Accounting Department.Finnaly i complete web desing form programmer hero</p>
+<p>I am Md.Abuzar Gefari,I am a Web designer and developer.I live in Rajshahi Bangladesh.I read in Rajshahi College in Accounting Department.Finnaly i complete web desing form programmer hero</p>
 <a target="_blank" class="hire-button"href="https://www.linkedin.com/in/abuzar-gefari-a56b6b1b9/">HIRE ME</a>
 </div>
    <div class="half-width">
@@ -32,7 +32,7 @@
             <h1>Big Dream</h1>
             <h2>Become world's no. 1 web developrer</h2>
             <p>I am already larned basic HTML and Css.I can bulid a professional protfolio web desing.I already complete about 30 protfolio web site.Thas's why i am very happy.</p>
-            <a class="hire-button" target="_blank" href="">DOWNLOAD CV</a>
+            <a class="hire-button" target="_blank" href="https://www.facebook.com/100009470122630/videos/2979514649040843/">DOWNLOAD CV</a>
         </div>
     </section>
     <section>
